[gd_scene load_steps=8 format=3 uid="uid://b67vsm87w37rn"]

[ext_resource type="Script" uid="uid://bo1kkpun8icsm" path="res://Scripts/editor.gd" id="1_6ykgs"]
[ext_resource type="Script" uid="uid://dbu1uyau7ht86" path="res://Scripts/main_viewport.gd" id="2_dfuwn"]
[ext_resource type="MeshLibrary" uid="uid://djfv73h0nqilb" path="res://Cube1.tres" id="3_6ykgs"]
[ext_resource type="Script" uid="uid://b47fakues6my3" path="res://Scripts/camera_3d.gd" id="4_brgpd"]

[sub_resource type="Environment" id="Environment_62x0m"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1qsck"]

[sub_resource type="Compositor" id="Compositor_agv3s"]

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ykgs")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="MainViewport" type="Node3D" parent="SubViewportContainer/SubViewport"]
script = ExtResource("2_dfuwn")

[node name="GridMap" type="GridMap" parent="SubViewportContainer/SubViewport/MainViewport"]
mesh_library = ExtResource("3_6ykgs")
cell_size = Vector3(1, 1, 1)

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/MainViewport"]
transform = Transform3D(0.7071068, -0.5, 0.5, 0, 0.7071068, 0.70710677, -0.7071068, -0.5, 0.5, 10, 10, 10)
current = true
script = ExtResource("4_brgpd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/MainViewport"]
environment = SubResource("Environment_62x0m")
camera_attributes = SubResource("CameraAttributesPractical_1qsck")
compositor = SubResource("Compositor_agv3s")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/MainViewport"]
transform = Transform3D(1, 0, 0, 0, -0.051813085, 0.9986568, 0, -0.9986568, -0.051813085, 0, 9.183848, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 180.0
offset_right = 240.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Map"
text_overrun_behavior = 4

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Characters"
text_overrun_behavior = 4

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Fight"
text_overrun_behavior = 4

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 720.0

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 27.0
offset_right = 139.0
offset_bottom = 128.0
text = "Cube1"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 720.0

[node name="Button" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 21.0
offset_top = 253.0
offset_right = 158.0
offset_bottom = 398.0
text = "wegwe"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 720.0

[node name="Button" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 42.0
offset_top = 486.0
offset_right = 145.0
offset_bottom = 558.0
text = "wwrw3rw3"
